# STL_VR_Viewer

./: .gitignore  ModelPartList_8cpp.html  ModelPartList_8cpp_source.html  ModelPartList_8h.html  ModelPartList_8h_source.html  ModelPart_8cpp.html  ModelPart_8cpp_source.html  ModelPart_8h.html  ModelPart_8h_source.html  README.md  VRRenderThread_8cpp.html  VRRenderThread_8cpp_source.html  VRRenderThread_8h.html  VRRenderThread_8h_source.html  Xiaohan.txt  annotated.html  classDialog-members.html  classDialog.html  classMainWindow-members.html  classMainWindow.html  classModelPart-members.html  classModelPart.html  classModelPartList-members.html  classModelPartList.html  classVRRenderThread-members.html  classVRRenderThread.html  classes.html  dialog_8cpp.html  dialog_8cpp_source.html  dialog_8h.html  dialog_8h_source.html  dir_4e8d938e9ddb5a617c200d5739d1f41a.html  files.html  functions.html  functions_b.html  functions_c.html  functions_d.html  functions_e.html  functions_enum.html  functions_eval.html  (+39 more)
.github/workflows/: doxygen-deploy.yml
search/: all_0.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_a.js  all_b.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  enums_0.js  enums_1.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  files_1.js  files_2.js  functions_0.js  functions_1.js  functions_10.js  functions_11.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  (+32 more)
source/: CMakeLists.txt  ModelPart.cpp  ModelPart.h  ModelPartList.cpp  ModelPartList.h  VRRenderThread.cpp  VRRenderThread.h  dialog.cpp  dialog.h  mainwindow.cpp  mainwindow.h
src/: CMakeLists.txt  Doxyfile  ModelPartList.cpp  ModelPartList.h  VRRenderThread.h  dialog.h  dialog.ui  main.cpp  mainwindow.cpp  mainwindow.ui
src/doxygen/: custom.css  overview.md
src/vrbindings/: vtk_openvr_actions.json  vtk_openvr_binding_hpmotioncontroller.json
team/WS6/: .gitignore  CMakeLists.txt  ModelPart.cpp  ModelPart.h  VRRenderThread.cpp  dialog.cpp  dialog.ui  icons.qrc  main.cpp  mainwindow.h
team/WS6/.github/workflows/: doxygen-deploy.yml
team/WS6/vrbindings/: vtk_openvr_binding_knuckles.json  vtk_openvr_binding_oculus_touch.json  vtk_openvr_binding_vive_controller.json
